--- a/# 方法和技巧随录.md
+++ b/# 方法和技巧随录.md
@@ -7,7 +7,7 @@
 > 一方面，便于自己系统性总结各种问题的解决技巧，另一方面也当做后续自己的复习或者学习的笔记  
 
 ## 栈
-### 对于在字符串类题目中处理字符长度范围的考虑
+### 对于涉及栈的字符串类题目中处理字符长度范围的考虑
 #### 描述
 有一类字符串问题，在处理时需要对字符串进行分段处理，比如括号问题，  
 虽然众所周知括号问题基本无脑往栈的方向找思路就可以，但是在细节处理上仍然有很多需要注意的地方，  
