--- a/# 方法和技巧随录.md
+++ b/# 方法和技巧随录.md
@@ -15,3 +15,13 @@
 #### 题目举例
 [0388 Longest Absolute File Path 文件的最长绝对路径](./%230388%20Longest%20Absolute%20File%20Path%20文件的最长绝对路径.md)  
 [1190 Reverse Substrings Between Each Pair of Parentheses 反转每对括号间的字串](./%231190%20Reverse%20Substrings%20Between%20Each%20Pair%20of%20Parentheses%20反转每对括号间的字串.md)  
+
+## 链表
+### 利用“占位”思想解决链表遍历不方便问题
+#### 描述
+链表是一种常见的数据结构，其最大的问题就是定位到某个具体位置不够方便，需要对整个链表进行遍历  
+在有一类问题中，对链表的处理经历了分治的过程，  
+在此过程中，如果需要用到链表不同位置（但这些位置存在一定的联系）的值，一般解决办法是多次遍历，  
+这时我们可以在分治的过程中利用占“占位”变量，将位置预留给没有遍历到的节点，待遍历到了再将其补上  
+#### 题目举例
+[0109 Convert Sorted List to Binary Search Tree 有序链表转换二叉搜索树](./%230109%20Convert%20Sorted%20List%20to%20Binary%20Search%20Tree%20有序链表转换二叉搜索树.md)
