--- a/# 方法和技巧随录.md
+++ b/# 方法和技巧随录.md
@@ -7,6 +7,16 @@
 > 一方面，便于自己系统性总结各种问题的解决技巧，另一方面也当做后续自己的复习或者学习的笔记  
 
 ## 栈
+
+### 单调栈
+#### 描述
+栈是一种常见的数据结构，单调栈是一种栈的特殊类型，用于记录顺序结构中具有单调递增或者递减性质的一系列数据  
+在解决问题时，如果遇到如下场景，可以考虑使用单调栈：  
+**对于一个数据，我们想知道其后面（或者前面）第一个比它大（或者小）数字的位置**  
+在使用单调栈时，需要注意栈中存储的内容是数据本身还是指向数据的一些参数，比如数组的下标，链表的节点地址等  
+#### 题目举例
+[0739 Daily Temperatures 每日温度](./%230739%20Daily%20Temperatures%20每日温度.md)  
+
 ### 对于涉及栈的字符串类题目中处理字符长度范围的考虑
 #### 描述
 有一类字符串问题，在处理时需要对字符串进行分段处理，比如括号问题，  
