--- a/# 方法和技巧随录.md
+++ b/# 方法和技巧随录.md
@@ -35,3 +35,14 @@
 这时我们可以在分治的过程中利用占“占位”变量，将位置预留给没有遍历到的节点，待遍历到了再将其补上  
 #### 题目举例
 [0109 Convert Sorted List to Binary Search Tree 有序链表转换二叉搜索树](./%230109%20Convert%20Sorted%20List%20to%20Binary%20Search%20Tree%20有序链表转换二叉搜索树.md)
+
+## 几种求随机数的方法
+### 蓄水池抽样
+#### 描述
+给定一个数据流，数据流长度 `N` 很大，且 `N` 直到处理完所有数据之前都不可知  
+如果需要在只遍历一遍数据（`O(N)`）的情况下，随机选出具有某些特定性质的数字，就可以采用此方法  
+对所有满足该性质的数字进行计数，并记录**该种类别数字出现的次数** `cnt`  
+如果 `cnt` 大于需要的次数，则可以对需要的次数求随机数，并比较该数字与已有数字的下标  
+如果下标小于需要的次数，则对对应下标的数字进行替换  
+#### 题目举例
+[0398 Random Pick Index 随机数索引](./%230398%20Random%20Pick%20Index%20随机数索引.md)  
