--- a/# 方法和技巧随录.md
+++ b/# 方法和技巧随录.md
@@ -24,6 +24,7 @@
 如果遇到的问题在考虑当前字符串时，一些因素与之前的字符串存在关联，那么不妨考虑将当前字符串和之前的字符串一起处理  
 #### 题目举例
 [388 Longest Absolute File Path 文件的最长绝对路径](./%230388%20Longest%20Absolute%20File%20Path%20文件的最长绝对路径.md)  
+[394 Decode String 字符串解码](./%230394%20Decode%20String%20字符串解码.md)  
 [1190 Reverse Substrings Between Each Pair of Parentheses 反转每对括号间的字串](./%231190%20Reverse%20Substrings%20Between%20Each%20Pair%20of%20Parentheses%20反转每对括号间的字串.md)  
 
 ## 链表
