--- a/# 方法和技巧随录.md
+++ b/# 方法和技巧随录.md
@@ -6,6 +6,18 @@
 > 在被两道并不算很难的中等题困扰了许久之后，决定记录下从现在开始，无论是复习还是做新题遇到的比较有意思的题解思路，  
 > 一方面，便于自己系统性总结各种问题的解决技巧，另一方面也当做后续自己的复习或者学习的笔记  
 
+## 数组
+
+### 前缀和
+#### 描述
+一维数组 `a[n]`，其任意位置的前缀和 `pre[i]` 为 `pre[i] = pre[i - 1] + a[i]`  
+二维数组 `a[m][n]`，其任意位置的前缀和 `pre[i][j]` 为 `pre[i][j] = a[i][j] + pre[i - 1][j] + pre[i][j - 1] - pre[i - 1][j - 1]`  
+利用前缀和，可以快速求出根据定义可以看到，前缀和即为从数组起点到 `i` 或者 `{i, j}` 位置的所有点的大小之和  
+因此可以利用前缀和快速求出任意范围内的数组和  
+利用提前处理数组获得前缀和数组，可以避免后续算法处理需要多次计算重复的数组和的问题  
+#### 题目举例
+[0427 Construct Quad Tree 建立四叉树](./%230427%20Construct%20Quad%20Tree%20建立四叉树.md)
+
 ## 栈
 
 ### 单调栈
