--- a/# 方法和技巧随录.md
+++ b/# 方法和技巧随录.md
@@ -16,7 +16,15 @@
 因此可以利用前缀和快速求出任意范围内的数组和  
 利用提前处理数组获得前缀和数组，可以避免后续算法处理需要多次计算重复的数组和的问题  
 #### 题目举例
-[0427 Construct Quad Tree 建立四叉树](./%230427%20Construct%20Quad%20Tree%20建立四叉树.md)
+[0427 Construct Quad Tree 建立四叉树](./%230427%20Construct%20Quad%20Tree%20建立四叉树.md)  
+
+### 滑动窗口
+#### 描述
+滑动窗口即一个左右边界在数组上移动的子数组区间  
+既然窗口内容本来就是子数组，那么此类方法就非常适合用来解决子数组问题  
+找到子数组符合的规律，可以快速利用滑动窗口解决在较好的时间复杂度解决问题  
+#### 题目举例
+[0713 Subarray Product Less Than K 乘积小于K的子数组](./%230713%20Subarray%20Product%20Less%20Than%20K%20乘积小于K的子数组.md)
 
 ## 栈
 
