--- a/# 方法和技巧随录.md
+++ b/# 方法和技巧随录.md
@@ -24,7 +24,16 @@
 既然窗口内容本来就是子数组，那么此类方法就非常适合用来解决子数组问题  
 找到子数组符合的规律，可以快速利用滑动窗口解决在较好的时间复杂度解决问题  
 #### 题目举例
-[0713 Subarray Product Less Than K 乘积小于K的子数组](./%230713%20Subarray%20Product%20Less%20Than%20K%20乘积小于K的子数组.md)
+[0713 Subarray Product Less Than K 乘积小于K的子数组](./%230713%20Subarray%20Product%20Less%20Than%20K%20乘积小于K的子数组.md)  
+
+### 原地哈希
+#### 描述
+利用哈希表将 `key` 和 `value` 对应便于快速查表定位或计数是一种常用的数据结构方法  
+原地哈希，顾名思义，就是将相关信息记录在原地，不利用额外空间  
+这种处理一般适用于数组大小和数组内的数字范围存在对应关系（比如范围相等）的情况  
+此时可以利用一些技巧，例如将数组中出现的数字转换后对应的下标 `index` 位置的数字变为负数或者平方来实现**该`index`已经出现过了**的记录  
+#### 题目举例
+[0442 Find All Duplicates in an Array 数组中重复的数据](./%230442%20Find%20All%20Duplicates%20in%20an%20Array%20数组中重复的数据.md)
 
 ## 栈
 
