--- a/# 方法和技巧随录.md
+++ b/# 方法和技巧随录.md
@@ -18,6 +18,15 @@
 #### 题目举例
 [0427 Construct Quad Tree 建立四叉树](./%230427%20Construct%20Quad%20Tree%20建立四叉树.md)  
 
+### 差分数组
+#### 描述
+对于一个数组 `a[n]`，其差分数组中的任意值为 `d[i] = a[i] - a[i -1]`，除了 `d[0] = a[0]`  
+差分数组的存在使得频繁的数组改动可以减少工作量，比如对某个区间加上同样的数字，这时差分数组只有区间最开始的前一个位置和最后的后一个位置的值发生了变化  
+因此总体改动次数减少了  
+此外，当需要求区间和时，只需要将差分数组从 `d[0]` 累加到该位置即可，时间复杂度为线性  
+#### 题目举例
+[1450 Number of Students Doing Homework at a Given Time 在既定时间做作业的学生](./%231450%20Number%20of%20Students%20Doing%20Homework%20at%20a%20Given%20Time%20在既定时间做作业的学生.md)
+
 ### 滑动窗口
 #### 描述
 滑动窗口即一个左右边界在数组上移动的子数组区间  
