--- a/# 方法和技巧随录.md
+++ b/# 方法和技巧随录.md
@@ -48,7 +48,7 @@
 ### KMP算法
 #### 描述
 KMP算法是一种用于字符串匹配的算法，假定有长串 `s` 和模式串 `mod`，KMP算法可以利用 `mod` 本身的重复性来减少多余的无用匹配过程  
-KMP算法的关键是构建一个记录 `mod` 字符串信息的数组 `next`，`next` 数组解释为 **next[i]表示mod[i]出现在整个字符串mod最前面的连续第i个位置**  
+KMP算法的关键是构建一个记录 `mod` 字符串信息的数组 `next`，`next` 数组解释为 **`next[i]`表示`mod[i]`出现在整个字符串`mod`最前面的连续第`i`个位置**  
 举例：`mod = "ababc"`，则 `next` 数组为 `next = {0, 0, 1, 2, 0}`，因为 `next[2]` 表示 `'a'`出现在前缀的第一个位置  
 这样处理 `next` 数组的目的是找出字符串的重复部分，以便于减少匹配过程  
 在匹配的过程中，如果 `mod` 和 `s` 在某处不匹配，可以不用从头开始，只需要知道 `next[i]` 的值，再从符合条件的上一个字符串的位置开始匹配即可  
